# Ranger

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md  example-config.yml
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/.deputy/: configuration.toml
.devcontainer/configs/: keycloak-realm.json
.gitea/workflows/: cicd.yml
deployment/: config.yml  docker-compose.yml  nginx.conf
deployment/deputy/: configuration.toml
migrations/2022-10-17-083504_create_scenarios/: up.sql
migrations/2022-10-17-085320_create_exercises/: up.sql
migrations/2022-10-17-145117_create_deployments/: up.sql
migrations/2022-10-22-172154_create_deployment_elements/: up.sql
migrations/2022-12-20-085117_accounts/: up.sql
migrations/2023-01-16-123433_condition_messages/: up.sql
migrations/2023-03-06-134205_add_start_end_to_deployments/: down.sql  up.sql
migrations/2023-05-04-133125_create_events_alter_deployment_elements/: up.sql
migrations/2023-09-20-075006_add_banner_message/: up.sql
migrations/2023-10-18-123000_create_emails/: up.sql
migrations/2023-10-23-105643_add_start_end_to_deployments/: up.sql
migrations/2023-11-06-145126_add_emailtemplate/: down.sql  up.sql
migrations/2023-11-13-131820_create_order_training_objectives/: up.sql
migrations/2023-12-06-075407_add_sdl_key_to_metrics/: down.sql
ranger/: Cargo.toml  changelog  example-config.yml
ranger-app/: .env  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
ranger-app/public/: Mock_Exercises.json  index.html
ranger-app/src/: App.css  App.test.tsx  App.tsx  constants.ts  i18n.ts  index.css  index.tsx  keycloak.ts  reportWebVitals.ts  store.ts
ranger-app/src/components/: ClientNavBar.tsx  DeploymentCard.tsx  EmailTable.tsx  EntitySelect.tsx  ExerciseCard.css  ExerciseCard.tsx  GroupDialog.tsx  GroupHeader.tsx  Header.tsx  HomeView.tsx  LoginInfo.tsx  MainNavBar.tsx  MarkdownFrame.tsx  MinimalNavBar.tsx  NameDialog.tsx  PageHolder.tsx  ParticipantNavBar.tsx  RoleSelect.tsx  Toaster.tsx  navbar.tsx  toaster.tsx
ranger-app/src/contexts/: LogContext.tsx
ranger-app/src/hooks/: useBannerVariablesInEditor.ts  useDefaultRoleSelect.ts  useEmailVariablesInEditor.ts  useExerciseStreaming.ts  useFetchRolesForDeployment.ts  useGetAllRoles.ts  useResourceEstimation.ts
ranger-app/src/models/: Deployment.ts  Exercise.ts  deployment.ts  email.ts  exercise.ts  groups.ts  manualMetric.ts  order.ts  pariticpant.ts  routes.ts  scenario.ts  schema.ts  score.ts  scoreElement.ts  scoreGraph.ts  tlo.ts  userRoles.ts  websocket.ts
ranger-app/src/pages/: DeploymentDetail.tsx  DeploymentFocus.tsx  Deployments.tsx  Email.tsx  EmailLog.tsx  Exercise.tsx  (+7 more)
ranger-grpc/: Cargo.toml  build.rs
ranger-grpc/src/: lib.rs
ranger/assets/: default-production-config.yml
ranger/assets/maintainer-scripts/: postrm  preinst
ranger/assets/unit-scripts/: ranger.service
ranger/src/: capability.rs  claims.rs  configuration.rs  constants.rs  database.rs  deployer.rs  deployers.rs  errors.rs  exercise.rs  lib.rs  logger.rs  machiner.rs  main.rs  node.rs  roles.rs  scenario.rs  schema.rs  templater.rs  test.rs
ranger/src/middleware/: authentication.rs  deployment.rs  exercise.rs  keycloak.rs  metric.rs  mod.rs  participant_authentication.rs
ranger/src/models/: account.rs  banner.rs  condition.rs  deployment.rs  email.rs  email_status.rs  event.rs  event_info.rs  exercise.rs  metric.rs  mod.rs  order.rs  participant.rs  scenario.rs  score.rs  upload.rs  user.rs
ranger/src/models/helpers/: deployer_type.rs  element_status.rs  grpc_package.rs  mod.rs  score.rs  score_element.rs  uuid.rs  websocket_wrapper.rs
ranger/src/routes/: basic.rs  deployers.rs  deputy_query.rs  email.rs  exercise.rs  mod.rs  order.rs  scenario.rs  schema.rs  tlo.rs  upload.rs
ranger/src/routes/admin/: email.rs  groups.rs  metric.rs  mod.rs  order.rs
ranger/src/routes/client/: order.rs
ranger/src/routes/participant/: deployment.rs  event_info.rs  events.rs  metric.rs  mod.rs  participants.rs  score.rs
ranger/src/services/: capabilities.rs  deployment.rs  mod.rs  scheduler.rs
ranger/src/services/client/: condition.rs  deputy_query.rs  event_info.rs  feature.rs  inject.rs  mod.rs  switch.rs  template.rs  virtual_machine.rs
ranger/src/services/database/: account.rs  banner.rs  condition.rs  deployment.rs  email.rs  email_status.rs  event.rs  event_info.rs  exercise.rs  metric.rs  mod.rs  order.rs  scenario.rs  score.rs  upload.rs
ranger/src/services/deployer/: distribution.rs  factory.rs  mod.rs
ranger/src/services/deployment/: condition.rs  event.rs  event_info.rs  feature.rs  inject.rs  ledger.rs  mod.rs  node.rs  template.rs
ranger/src/services/mailer/: mod.rs
ranger/src/services/websocket/: mod.rs
ranger/src/snapshots/: ranger__configuration__tests__can_parse_the_configuration.snap  ranger__configuration__tests__can_parse_the_configuration_with_mailer.snap
ranger/src/utilities/: deployment.rs  event.rs  mod.rs  scenario.rs  validation.rs
ranger/tests/: basic.rs  capability.rs  deployers.rs  machiner.rs  node.rs  templater.rs
ranger/tests/common/: mod.rs
ranger/tests/snapshots/: capability__tests__successful_capability_response.snap  deployers__tests__add_deployer_groups.snap  machiner__tests__mock_deploy_vms.snap  machiner__tests__verify_vm_node_deployment_struct.snap  node__tests__node_created_successfully.snap  node__tests__node_creation_failed.snap  node__tests__node_deletion_failed.snap  template__tests__template_created_successfully.snap  templater__tests__template_created_successfully.snap
test-sdl's/: metric & account test
(+124 files in other folders)
