[package]
name = "ranger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
name = "ranger"
maintainer = "Madis-Mikk Remmet <developers@cr14.ee>"
copyright = "2022, CR14 <info@cr14.ee>"
depends = "$auto, systemd"
section = "utility"
priority = "optional"
assets = [
  [
    "target/release/ranger",
    "/var/opt/ranger/bin/",
    "755",
  ],
  [
    "assets/default-production-config.yml",
    "/etc/opt/ranger/ranger/config.yml",
    "644",
  ],
]
systemd-units = { unit-name = "ranger", unit-scripts = "assets/unit-scripts" }

[dependencies]
actix = "0.13"
actix-web = "4"
actix-http = { version = "3", features = ["http2", "ws"] }
anyhow = "1"
async-trait = "0.1"
env_logger = "0.9"
futures = "0.3"
insta = { version = "1", features = ["redactions", "yaml"] }
log = "0.4"
lazy_static = "1.4"
rand = "0.8"
ranger-grpc = { path = "../ranger-grpc" }
sdl-parser = { git = "ssh://git@code.ocr.cr14.net/open-cyber-range/public/sdl-parser", branch = "feature/even-better-sdl" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
semver = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "time",
  "fs",
  "macros",
  "net",
  "rt",
] }
tonic = "0.8"
uuid = { version = "1.1", features = ["v4", "serde"] }

[dev-dependencies]
actix-rt = "2"
sdl-parser = { git = "ssh://git@code.ocr.cr14.net/open-cyber-range/public/sdl-parser", branch = "feature/even-better-sdl", features = [
  "test",
] }
