[package]
name = "ranger"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
name = "ranger-server"
maintainer = "C14 developers <developers@cr14.ee>"
copyright = "MIT"
depends = "$auto, systemd"
section = "utility"
priority = "optional"
changelog = "changelog"
assets = [
  [
    "target/release/ranger",
    "/var/opt/ranger/bin/",
    "755",
  ],
  [
    "assets/default-production-config.yml",
    "/etc/opt/ranger/ranger/config.yml",
    "644",
  ],
  [
    "../ranger-app/build/assets/*",
    "/etc/opt/ranger/ranger-app/assets",
    "644",
  ],
  [
    "../ranger-app/build/*",
    "/etc/opt/ranger/ranger-app/",
    "644",
  ],
]
systemd-units = { unit-name = "ranger", unit-scripts = "assets/unit-scripts" }

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
actix-http = { version = "3", features = ["http2", "ws"] }
anyhow = "1"
async-trait = "0.1"
bigdecimal = { version = "0.3", features = ["serde"] }
chrono = "0.4"
diesel = { version = "2", features = ["mysql", "r2d2", "chrono", "numeric"] }
diesel_migrations = "2"
env_logger = "0.9"
futures = "0.3"
insta = { version = "1", features = ["redactions", "yaml"] }
log = "0.4"
lazy_static = "1.4"
rand = "0.8"
ranger-grpc = { path = "../ranger-grpc" }
sdl-parser = { git = "ssh://git@code.ocr.cr14.net/open-cyber-range/public/sdl-parser", branch = "develop" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
semver = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "time",
  "fs",
  "macros",
  "net",
  "rt",
] }
tonic = "0.8"
uuid = { version = "1.1", features = ["v4", "serde"] }

[dev-dependencies]
actix-rt = "2"
sdl-parser = { git = "ssh://git@code.ocr.cr14.net/open-cyber-range/public/sdl-parser", branch = "develop", features = [
  "test",
] }
